--- a/app/src/main/res/layout/activity_create_party.xml
+++ b/app/src/main/res/layout/activity_create_party.xml
@@ -34,7 +34,7 @@
 
 
     <EditText
-        android:id="@+id/adressInput"
+        android:id="@+id/addressInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -67,15 +67,15 @@
         android:text="Date"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/adressInput" />
+        app:layout_constraintTop_toBottomOf="@+id/addressInput" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="88dp"
-        android:text="Create"
         android:onClick="submitParty"
+        android:text="Create"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,12 +90,14 @@
         android:layout_marginTop="131dp"
         android:layout_marginBottom="133dp"
         android:clickable="true"
+        android:visibility="visible"
         android:onClick="showDatePicker"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintStart_toEndOf="@+id/Date"
-        app:layout_constraintTop_toTopOf="@+id/adressInput"
+        app:layout_constraintTop_toTopOf="@+id/addressInput"
         app:srcCompat="@android:drawable/ic_menu_my_calendar"
-        tools:ignore="SpeakableTextPresentCheck" />
+        tools:ignore="SpeakableTextPresentCheck"
+        android:focusable="true" />
 
     <TextView
         android:id="@+id/dateTextView"
